<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent">

<android.support.v7.widget.GridLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="8dip"
    android:paddingRight="8dip"
    android:visibility="visible"
    app:columnCount="3"
    app:layout_constraintWidth_percent="100">

    <!-- Receipt Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/receipt_title_label"
        app:layout_column="0"
        app:layout_row="0" />

    <EditText
        android:id="@+id/receipt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/receipt_title_hint"
        android:inputType="text"
        android:gravity="fill_horizontal"
        app:layout_column="1"
        app:layout_columnSpan="2"
        app:layout_gravity="fill_horizontal"
        app:layout_row="0" />

    <!-- Receipt Shop Name -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/receipt_shop_name_label"
        app:layout_column="0"
        app:layout_row="1" />

    <EditText
        android:id="@+id/receipt_shop_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/receipt_shop_name_hint"
        android:inputType="text"
        app:layout_column="1"
        app:layout_columnSpan="2"
        app:layout_row="1" />

    <!-- Receipt Date -->
    <Button
        android:id="@+id/receipt_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:paddingLeft="8dip"
        android:paddingRight="8dip"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_column="0"
        app:layout_columnSpan="3"
        app:layout_row="2" />

    <!-- Receipt Comments -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/receipt_comment_label"
        app:layout_column="0"
        app:layout_row="3" />

    <EditText
        android:id="@+id/receipt_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/receipt_comment_hint"
        android:inputType="textMultiLine"
        app:layout_column="1"
        app:layout_columnSpan="2"
        app:layout_row="3" />

    <!-- Receipt Location -->


    <!-- Receipt Image -->


    <!-- Receipt Report -->
    <Button
        android:id="@+id/receipt_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:paddingLeft="8dip"
        android:paddingRight="8dip"
        android:text="@string/receipt_report_label"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_column="0"
        app:layout_columnSpan="3"
        app:layout_row="4" />




</android.support.v7.widget.GridLayout>
</android.support.constraint.ConstraintLayout>


